# RSpringViewer

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  convert.mjs  optimize.mjs  package.json  usd2glb.py
config/: equipment_groups.json  equipment_mapping.json
config/plc/: CONVEYOR_01.json  CONVEYOR_01.toml  DRILL_TAP.json  DRILL_TAP.toml  SPRING_CONVEYOR.json  SPRING_CONVEYOR.toml  STOPPER_NUT_CONV_02.json  STOPPER_NUT_CONV_02.toml  YOKE_CONVEYOR.json  YOKE_CONVEYOR.toml
connector/: Cargo.toml
connector/src/: aas_client.rs  main.rs  nucleus_client.rs  sync_engine.rs
extension/: extension.toml
extension/omni/aas/: __init__.py  aas_client.py  extension.py  ui_panel.py
models/: RSpring_opt.glb
scripts/: register_aas.sh
src/: main.rs
static/: index.html  settings.html
static/css/: style.css
static/js/: aas-integration.js  plc-settings.js  viewer.js
