[package]
name = "nucleus-aas-connector"
version = "0.1.0"
edition = "2021"
description = "Omniverse Nucleus ↔ AAS bidirectional sync connector"
authors = ["Paul Yu"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
